--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:wght@100;400;700&display=swap');
-
+/* color: */
+@import url("https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:wght@100;400;700&display=swap");
 body {
   margin: 0;
   padding: 0;
@@ -41,34 +41,13 @@ header {
   color: inherit;
 }
 
-
-
-
-
-/* nav ul {
-  text-align: right;
+footer > * {
+  padding: 20px;
 }
 
-nav ul li {
-  display: inline;
-  padding: 15px;
+footer {
+  background-color: #000;
 }
-
-.nav-link {
-  color: #ffffff;
-  text-decoration: none;
-    font-family: 'roboto', sans-serif;
-} */
-
-
-/* main */
-/* main {
-  margin-top: -100px;
-  /* background-color: #ffbe00; */
-/* overflow: hidden;
-} */
-
-
 
 .contenedor {
   margin-top: 40px;
@@ -76,7 +55,7 @@ nav ul li {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: auto;
-  grid-template-areas: 'left left right right';
+  grid-template-areas: "left left right right";
   padding: 0px 20px;
   background-image: url("https://c4.wallpaperflare.com/wallpaper/766/984/966/twenty-one-pilots-yellow-trench-minimalism-wallpaper-preview.jpg");
 }
@@ -86,16 +65,15 @@ nav ul li {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 90%;
   gap: 50px;
+  width: 90%;
 }
-
 .inicio-izquierda p {
   color: #fff;
   background-color: #000000;
   font-size: 25px;
   font-weight: 500;
-  font-family: 'roboto';
+  font-family: "roboto";
   text-align: center;
   padding: 40px;
   border-radius: 20px;
@@ -104,7 +82,6 @@ nav ul li {
 .inicio-derecha {
   grid-area: right;
 }
-
 .inicio-derecha img {
   width: 100%;
   min-height: 800px;
@@ -112,8 +89,6 @@ nav ul li {
   object-fit: cover;
   margin-bottom: -4px;
 }
-
-
 
 section .cards {
   display: block;
@@ -126,12 +101,11 @@ section .cards {
 }
 
 .titulomerch {
-  color: #ffffff;
+  color: #fff;
   margin: 70px auto 50px;
-  font-family: 'roboto';
+  font-family: "roboto";
   font-size: 40px;
 }
-
 
 .card_body img {
   width: 100%;
@@ -143,25 +117,25 @@ section .cards {
 .card_body {
   display: inline-block;
   width: 30%;
-  background-color: #ffbe00;
+  background-color: #FFBE00;
   margin: 50px 50px 50px 50px;
   border-radius: 5%;
 }
 
 .card_body h2 {
-  font-family: 'roboto';
+  font-family: "roboto";
 }
 
 .card_body p {
-  font-family: 'roboto';
+  font-family: "roboto";
   padding: 15px;
   text-align: left;
 }
 
 a.boton-merch {
-  background-color: #ffbe00;
+  background-color: #FFBE00;
   color: #121212;
-  font-family: 'roboto';
+  font-family: "roboto";
   font-size: 24px;
   font-weight: 800;
   font-style: normal;
@@ -186,15 +160,6 @@ a.boton-merch:active {
   padding-bottom: 50px;
 }
 
-
-footer >* {
-  padding: 20px;
-}
-
-footer {
-  background-color: #000;
-}
-
 .fotosgaleria {
   margin-top: 30px;
   background-image: url("https://c4.wallpaperflare.com/wallpaper/766/984/966/twenty-one-pilots-yellow-trench-minimalism-wallpaper-preview.jpg");
@@ -208,6 +173,14 @@ footer {
   margin: auto;
 }
 
+.imageng {
+  transition: 0.3s;
+}
+.imageng:hover {
+  transform: scale(1.05, 1.05);
+  cursor: pointer;
+}
+
 .imagenes img {
   flex: 1 1 0px;
   width: 0;
@@ -215,7 +188,7 @@ footer {
 
 .fotosgaleria h2 {
   text-align: center;
-  font-family: 'roboto';
+  font-family: "roboto";
   font-size: 50px;
   font-weight: bold;
 }
@@ -240,8 +213,8 @@ footer {
 }
 
 .titulotour h2 {
-  color: #ffffff;
-  font-family: 'roboto';
+  color: #fff;
+  font-family: "roboto";
   font-weight: bold;
   text-align: center;
 }
@@ -252,11 +225,11 @@ footer {
 }
 
 .fechas ul {
-  color: #ffffff;
+  color: #fff;
   list-style-type: none;
   display: inline-block;
   width: 30%;
-  font-family: 'roboto';
+  font-family: "roboto";
   font-weight: bold;
   text-align: center;
 }
@@ -264,7 +237,6 @@ footer {
 .fechas ul li {
   margin: 50px auto;
 }
-
 
 .discografia {
   padding-top: 40px;
@@ -274,13 +246,12 @@ footer {
 }
 
 .discografia h2 {
-  color: #ffffff;
+  color: #fff;
   text-align: center;
-  font-family: 'roboto';
+  font-family: "roboto";
   font-weight: bold;
   font-size: 50px;
 }
-
 
 .cardspotify {
   margin: auto;
@@ -291,16 +262,13 @@ footer {
   margin: auto 1px;
 }
 
-
 .discografia p {
-  color: #ffffff;
+  color: #fff;
   text-align: center;
-  font-family: 'roboto';
+  font-family: "roboto";
   font-size: 20px;
   margin: 10px 100px 100px;
 }
-
-
 
 .formulario {
   margin-top: 50px;
@@ -309,17 +277,17 @@ footer {
 }
 
 .formulario h1 {
-  color: #ffffff;
+  color: #fff;
   text-align: center;
-  font-family: 'roboto';
+  font-family: "roboto";
   font-weight: bold;
   font-size: 50px;
 }
 
 .formulario p {
-  color: #ffffff;
+  color: #fff;
   text-align: center;
-  font-family: 'roboto';
+  font-family: "roboto";
   font-size: 20px;
   margin: 10px 100px 100px;
 }
@@ -327,15 +295,15 @@ footer {
 form {
   width: 450px;
   margin: auto;
-  background: rgba(0, 0, 0, 4);
+  background: rgb(0, 0, 0);
   padding: 20px;
   box-sizing: border-box;
   margin-top: 20px;
   border-radius: 7px;
 }
 
-form>* {
-  font-family: 'roboto';
+form > * {
+  font-family: "roboto";
 }
 
 input,
@@ -352,7 +320,6 @@ textarea {
   max-height: 200px;
   max-width: 100%;
   resize: none;
-
 }
 
 #boton {
@@ -366,10 +333,7 @@ textarea {
   cursor: pointer;
 }
 
-
-
 /* mediaqueries */
-
 @media only screen and (max-width: 1000px) {
   .contenedor {
     display: flex;
@@ -377,7 +341,6 @@ textarea {
     align-items: center;
     padding: 0;
   }
-
   .inicio-derecha img {
     object-fit: contain;
     width: 100%;
@@ -385,7 +348,6 @@ textarea {
     max-height: 100%;
     height: auto;
   }
-
   .inicio-izquierda p {
     background-color: transparent;
     width: 90%;
@@ -393,25 +355,44 @@ textarea {
     border-radius: 0;
     padding: 0;
     margin-top: 20px;
-
   }
-
   .inicio-izquierda {
     width: 100%;
     background-color: #191919;
   }
-
   .card_body {
     width: 100%;
     margin: 50px 0px;
   }
-
-
+  .cardspotify {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  iframe {
+    margin: 10px 0 !important;
+  }
+  .discografia p {
+    margin: 30px 50px;
+  }
+  .fechas {
+    display: flex;
+    width: 100%;
+  }
+  .fechas ul li {
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .fondotour {
+    margin-top: 40px;
+  }
 }
-
-
 @media only screen and (max-width: 1150px) {
   .imagenes img {
     width: 50%;
   }
 }
+
+/*# sourceMappingURL=style.css.map */
